--- a/src/components/InputIsp.css
+++ b/src/components/InputIsp.css
@@ -1,4 +1,3 @@
-
 .InputIsp{
     display: flex;
     justify-content: space-between;
@@ -16,7 +15,7 @@
     background-color: transparent;
 }
 
-.InputIsp .InputIsp_detected{
+.InputIsp .InputIsp__Logo{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +24,7 @@
     width: 20px;
 }
 
-.InputIsp_detected img{
+.InputIsp__Logo img{
     width: 28px;
     border-radius: 4px;
     user-select: none;
