--- a/src/components/InputIsp.css
+++ b/src/components/InputIsp.css
@@ -2,12 +2,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid #333333;
+    border: 1px solid #747171;
     width: max-content;
     padding: 0 8px;
     background-color: white;
+    border-radius: 4px;
+    transition: .2s ease-in-out;
 }
 
+.InputIsp:focus-within{
+    border: 1px solid #343536;
+}
 .InputIsp input[type='tel']{
     height: 30px;
     border: none;
